manifests/signoz/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      clickhouse-operator-reconcile: force-2
      clickhouse.altinity.com/ready: "yes"
      meta.helm.sh/release-name: signoz
      meta.helm.sh/release-namespace: signoz
    labels:
      app.kubernetes.io/component: clickhouse
      app.kubernetes.io/instance: signoz
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: clickhouse
      app.kubernetes.io/version: 24.1.2
      clickhouse.altinity.com/Service: host
      clickhouse.altinity.com/app: chop
      clickhouse.altinity.com/chi: signoz-clickhouse
      clickhouse.altinity.com/cluster: cluster
      clickhouse.altinity.com/namespace: signoz
      clickhouse.altinity.com/object-version: 9e82bea701fec4beb290d2c7a97a83c82c77dca4
      clickhouse.altinity.com/replica: "0"
      clickhouse.altinity.com/shard: "0"
      helm.sh/chart: clickhouse-24.1.18
    name: chi-signoz-clickhouse-cluster-0-0
    namespace: signoz
    ownerReferences:
    - apiVersion: clickhouse.altinity.com/v1
      blockOwnerDeletion: true
      controller: true
      kind: ClickHouseInstallation
      name: signoz-clickhouse
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: tcp
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: http
      port: 8123
      protocol: TCP
      targetPort: 8123
    - name: interserver
      port: 9009
      protocol: TCP
      targetPort: 9009
    publishNotReadyAddresses: true
    selector:
      clickhouse.altinity.com/app: chop
      clickhouse.altinity.com/chi: signoz-clickhouse
      clickhouse.altinity.com/cluster: cluster
      clickhouse.altinity.com/namespace: signoz
      clickhouse.altinity.com/replica: "0"
      clickhouse.altinity.com/shard: "0"
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"otel-agent","app.kubernetes.io/instance":"k8s-infra","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"k8s-infra","app.kubernetes.io/version":"0.139.0","helm.sh/chart":"k8s-infra-0.15.0"},"name":"k8s-infra-otel-agent","namespace":"signoz"},"spec":{"internalTrafficPolicy":"Local","ports":[{"name":"health-check","nodePort":null,"port":13133,"protocol":"TCP","targetPort":" [...]
      meta.helm.sh/release-name: k8s-infra
      meta.helm.sh/release-namespace: signoz
    labels:
      app.kubernetes.io/component: otel-agent
      app.kubernetes.io/instance: k8s-infra
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: k8s-infra
      app.kubernetes.io/version: 0.139.0
      helm.sh/chart: k8s-infra-0.15.0
    name: k8s-infra-otel-agent
    namespace: signoz
  spec:
    clusterIP: 10.111.238.86
    clusterIPs:
    - 10.111.238.86
    internalTrafficPolicy: Local
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: health-check
      port: 13133
      protocol: TCP
      targetPort: health-check
    - name: metrics
      port: 8888
      protocol: TCP
      targetPort: metrics
    - name: otlp
      port: 4317
      protocol: TCP
      targetPort: otlp
    - name: otlp-http
      port: 4318
      protocol: TCP
      targetPort: otlp-http
    selector:
      app.kubernetes.io/component: otel-agent
      app.kubernetes.io/instance: k8s-infra
      app.kubernetes.io/name: k8s-infra
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"otel-deployment","app.kubernetes.io/instance":"k8s-infra","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"k8s-infra","app.kubernetes.io/version":"0.139.0","helm.sh/chart":"k8s-infra-0.15.0"},"name":"k8s-infra-otel-deployment","namespace":"signoz"},"spec":{"ports":[{"name":"health-check","nodePort":null,"port":13133,"protocol":"TCP","targetPort":"health-check"}],"selec [...]
      meta.helm.sh/release-name: k8s-infra
      meta.helm.sh/release-namespace: signoz
    labels:
      app.kubernetes.io/component: otel-deployment
      app.kubernetes.io/instance: k8s-infra
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: k8s-infra
      app.kubernetes.io/version: 0.139.0
      helm.sh/chart: k8s-infra-0.15.0
    name: k8s-infra-otel-deployment
    namespace: signoz
  spec:
    clusterIP: 10.111.26.163
    clusterIPs:
    - 10.111.26.163
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: health-check
      port: 13133
      protocol: TCP
      targetPort: health-check
    selector:
      app.kubernetes.io/component: otel-deployment
      app.kubernetes.io/instance: k8s-infra
      app.kubernetes.io/name: k8s-infra
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"signoz","app.kubernetes.io/instance":"signoz","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"signoz","app.kubernetes.io/version":"v0.117.1","helm.sh/chart":"signoz-0.117.1"},"name":"signoz","namespace":"signoz"},"spec":{"ports":[{"name":"http","nodePort":null,"port":8080,"protocol":"TCP","targetPort":"http"},{"name":"http-internal","nodePort":null,"port":8085,"protoc [...]
      meta.helm.sh/release-name: signoz
      meta.helm.sh/release-namespace: signoz
    labels:
      app.kubernetes.io/component: signoz
      app.kubernetes.io/instance: signoz
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: signoz
      app.kubernetes.io/version: v0.117.1
      helm.sh/chart: signoz-0.117.1
    name: signoz
    namespace: signoz
  spec:
    clusterIP: 10.96.72.230
    clusterIPs:
    - 10.96.72.230
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
    - name: http-internal
      port: 8085
      protocol: TCP
      targetPort: http-internal
    - name: opamp-internal
      port: 4320
      protocol: TCP
      targetPort: opamp-internal
    selector:
      app.kubernetes.io/component: signoz
      app.kubernetes.io/instance: signoz
      app.kubernetes.io/name: signoz
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      clickhouse-operator-reconcile: force-2
      meta.helm.sh/release-name: signoz
      meta.helm.sh/release-namespace: signoz
    labels:
      app.kubernetes.io/component: clickhouse
      app.kubernetes.io/instance: signoz
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: clickhouse
      app.kubernetes.io/version: 24.1.2
      clickhouse.altinity.com/Service: chi
      clickhouse.altinity.com/app: chop
      clickhouse.altinity.com/chi: signoz-clickhouse
      clickhouse.altinity.com/namespace: signoz
      clickhouse.altinity.com/object-version: 21d2c8b75ba2facc8005de532c4fa2fda6a8a24a
      helm.sh/chart: clickhouse-24.1.18
    name: signoz-clickhouse
    namespace: signoz
    ownerReferences:
    - apiVersion: clickhouse.altinity.com/v1
      blockOwnerDeletion: true
      controller: true
      kind: ClickHouseInstallation
      name: signoz-clickhouse
  spec:
    clusterIP: 10.98.16.58
    clusterIPs:
    - 10.98.16.58
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 8123
      protocol: TCP
      targetPort: 8123
    - name: tcp
      port: 9000
      protocol: TCP
      targetPort: 9000
    selector:
      clickhouse.altinity.com/app: chop
      clickhouse.altinity.com/chi: signoz-clickhouse
      clickhouse.altinity.com/namespace: signoz
      clickhouse.altinity.com/ready: "yes"
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"operator","app.kubernetes.io/instance":"signoz","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"clickhouse","app.kubernetes.io/version":"24.1.2","clickhouse.altinity.com/chop":"0.21.2","helm.sh/chart":"clickhouse-24.1.18"},"name":"signoz-clickhouse-operator-metrics","namespace":"signoz"},"spec":{"ports":[{"name":"signoz-clickhouse-operator-metrics","port":8888}],"sele [...]
      meta.helm.sh/release-name: signoz
      meta.helm.sh/release-namespace: signoz
    labels:
      app.kubernetes.io/component: operator
      app.kubernetes.io/instance: signoz
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: clickhouse
      app.kubernetes.io/version: 24.1.2
      clickhouse.altinity.com/chop: 0.21.2
      helm.sh/chart: clickhouse-24.1.18
    name: signoz-clickhouse-operator-metrics
    namespace: signoz
  spec:
    clusterIP: 10.111.67.180
    clusterIPs:
    - 10.111.67.180
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: signoz-clickhouse-operator-metrics
      port: 8888
      protocol: TCP
      targetPort: 8888
    selector:
      app.kubernetes.io/component: operator
      app.kubernetes.io/instance: signoz
      app.kubernetes.io/name: clickhouse
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"otel-collector","app.kubernetes.io/instance":"signoz","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"signoz","app.kubernetes.io/version":"v0.117.1","helm.sh/chart":"signoz-0.117.1"},"name":"signoz-otel-collector","namespace":"signoz"},"spec":{"ports":[{"name":"jaeger-grpc","nodePort":null,"port":14250,"protocol":"TCP","targetPort":"jaeger-grpc"},{"name":"jaeger-thrif [...]
      meta.helm.sh/release-name: signoz
      meta.helm.sh/release-namespace: signoz
    labels:
      app.kubernetes.io/component: otel-collector
      app.kubernetes.io/instance: signoz
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: signoz
      app.kubernetes.io/version: v0.117.1
      helm.sh/chart: signoz-0.117.1
    name: signoz-otel-collector
    namespace: signoz
  spec:
    clusterIP: 10.109.240.173
    clusterIPs:
    - 10.109.240.173
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - appProtocol: grpc
      name: jaeger-grpc
      port: 14250
      protocol: TCP
      targetPort: jaeger-grpc
    - name: jaeger-thrift
      port: 14268
      protocol: TCP
      targetPort: jaeger-thrift
    - name: logsheroku
      port: 8081
      protocol: TCP
      targetPort: logsheroku
    - name: logsjson
      port: 8082
      protocol: TCP
      targetPort: logsjson
    - name: metrics
      port: 8888
      protocol: TCP
      targetPort: metrics
    - appProtocol: grpc
      name: otlp
      port: 4317
      protocol: TCP
      targetPort: otlp
    - name: otlp-http
      port: 4318
      protocol: TCP
      targetPort: otlp-http
    selector:
      app.kubernetes.io/component: otel-collector
      app.kubernetes.io/instance: signoz
      app.kubernetes.io/name: signoz
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"zookeeper","app.kubernetes.io/instance":"signoz","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"zookeeper","helm.sh/chart":"zookeeper-0.0.1"},"name":"signoz-zookeeper","namespace":"signoz"},"spec":{"ports":[{"name":"tcp-client","nodePort":null,"port":2181,"targetPort":"client"},{"name":"tcp-follower","port":2888,"targetPort":"follower"},{"name":"tcp-election","port": [...]
      meta.helm.sh/release-name: signoz
      meta.helm.sh/release-namespace: signoz
    labels:
      app.kubernetes.io/component: zookeeper
      app.kubernetes.io/instance: signoz
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: zookeeper
      helm.sh/chart: zookeeper-0.0.1
    name: signoz-zookeeper
    namespace: signoz
  spec:
    clusterIP: 10.96.198.236
    clusterIPs:
    - 10.96.198.236
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: tcp-client
      port: 2181
      protocol: TCP
      targetPort: client
    - name: tcp-follower
      port: 2888
      protocol: TCP
      targetPort: follower
    - name: tcp-election
      port: 3888
      protocol: TCP
      targetPort: election
    selector:
      app.kubernetes.io/component: zookeeper
      app.kubernetes.io/instance: signoz
      app.kubernetes.io/name: zookeeper
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"zookeeper","app.kubernetes.io/instance":"signoz","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"zookeeper","helm.sh/chart":"zookeeper-0.0.1"},"name":"signoz-zookeeper-headless","namespace":"signoz"},"spec":{"clusterIP":"None","ports":[{"name":"tcp-client","port":2181,"targetPort":"client"},{"name":"tcp-follower","port":2888,"targetPort":"follower"},{"name":"tcp-elect [...]
      meta.helm.sh/release-name: signoz
      meta.helm.sh/release-namespace: signoz
    labels:
      app.kubernetes.io/component: zookeeper
      app.kubernetes.io/instance: signoz
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: zookeeper
      helm.sh/chart: zookeeper-0.0.1
    name: signoz-zookeeper-headless
    namespace: signoz
  spec:
    clusterIP: None
    clusterIPs:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: tcp-client
      port: 2181
      protocol: TCP
      targetPort: client
    - name: tcp-follower
      port: 2888
      protocol: TCP
      targetPort: follower
    - name: tcp-election
      port: 3888
      protocol: TCP
      targetPort: election
    publishNotReadyAddresses: true
    selector:
      app.kubernetes.io/component: zookeeper
      app.kubernetes.io/instance: signoz
      app.kubernetes.io/name: zookeeper
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"prometheus.io/path":"/metrics","prometheus.io/port":"9141","prometheus.io/scrape":"true"},"labels":{"app.kubernetes.io/component":"metrics","app.kubernetes.io/instance":"signoz","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"zookeeper","helm.sh/chart":"zookeeper-0.0.1"},"name":"signoz-zookeeper-metrics","namespace":"signoz"},"spec":{"ports":[{"name":"tcp-metrics","port":9141,"targetPort":"metrics"}],"selecto [...]
      meta.helm.sh/release-name: signoz
      meta.helm.sh/release-namespace: signoz
      prometheus.io/path: /metrics
      prometheus.io/port: "9141"
      prometheus.io/scrape: "true"
    labels:
      app.kubernetes.io/component: metrics
      app.kubernetes.io/instance: signoz
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: zookeeper
      helm.sh/chart: zookeeper-0.0.1
    name: signoz-zookeeper-metrics
    namespace: signoz
  spec:
    clusterIP: 10.107.234.229
    clusterIPs:
    - 10.107.234.229
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: tcp-metrics
      port: 9141
      protocol: TCP
      targetPort: metrics
    selector:
      app.kubernetes.io/component: zookeeper
      app.kubernetes.io/instance: signoz
      app.kubernetes.io/name: zookeeper
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
